@@ -4649,7 +4649,7 @@ PACKAGE: 2.2.99.2
  * Added style to upload document fields table.
  * Right aligned document fields titles.
 
-20060-10-18 cjg
+2006-10-18 cjg
  * Added action lists for all variations of eprint status and owner/editor
  * These are now used to generate quick-link buttons at the top and bottom
     of the view page.
@@ -4657,3 +4657,7 @@ PACKAGE: 2.2.99.2
     method.
  * Moved New EPrint to a screen of its own
  * Added a new actions list which is used on the top of the items page. 
+
+2006-10-18 cjg
+ * Named Sets now search correctly and have a correct help phrase.
+
